# mycelium

./: .gitignore  ADDITIONAL.md  AGENTS.md  Cargo.toml  LICENSE  MYCUI_PLAN.md  README.md  install.sh
.mycelium/: mycelium.db
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
mycui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mycui/src/: App.tsx  index.css  main.tsx
mycui/src-tauri/: Cargo.toml  tauri.conf.json
mycui/src-tauri/src/: db.rs  main.rs  models.rs
mycui/src/lib/: api.ts  types.ts
src/: main.rs
src/cli/: mod.rs
src/commands/: assignee.rs  deps.rs  doctor.rs  epic.rs  export.rs  init.rs  list.rs  mod.rs  summary.rs  task.rs
src/db/: migrations.rs  mod.rs
src/error/: mod.rs
src/models/: assignee.rs  dependency.rs  epic.rs  external_ref.rs  mod.rs  task.rs  task_note.rs
tests/: integration_tests.rs
