[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"
authors = ["Mycelium Contributors"]
description = "A robust, production-grade task/plan manager CLI"
license = "MIT"
repository = "https://github.com/tcsenpai/mycelium"
keywords = ["cli", "task-manager", "project-management", "productivity"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[[bin]]
name = "myc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
directories = "5.0"
colored = "2.1"
comfy-table = "7.1"
regex = "1.11"
url = "2.5"
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
